# prompt_master

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/skills/benchmark/: SKILL.md
.claude/skills/design-workflow/: SKILL.md
.claude/skills/optimize-prompt/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  judge.py  report.py  runner.py  scorer.py
benchmarks/cases/: creative.toml
src/prompt_master/: __init__.py  __main__.py  chat.py  cli.py  client.py  config.py  conversation.py  display.py  fallback.py  history.py  interactive.py  optimizer.py  prompts.py  session.py  templates.py  validation.py  vibe.py
src/prompt_master/benchmarks/: judge.py  report.py  runner.py  scorer.py
src/prompt_master/benchmarks/cases/: analysis.toml  code.toml  general.toml  workflow.toml
src/prompt_master/templates/: analysis.toml  code.toml
src/prompt_master/tui/: __init__.py  app.py  attention.py  cache.py  canvas.py  conversation_zone.py  dimension_nav.py  exploration_pad.py  intelligence.py  keybindings.py  realtime_scorer.py  section_block.py  section_vibe.py  status_line.py  variation_drawer.py  whisper.py
src/prompt_master/tui/css/: canvas.tcss
templates/: creative.toml  general.toml  workflow.toml
tests/: conftest.py  test_benchmark.py  test_chat.py  test_cli.py  test_conversation.py  test_fallback.py  test_hardening.py  test_interactive.py  test_optimizer.py  test_session.py  test_templates.py  test_vibe.py  test_workflow.py
tests/test_tui/: test_attention.py  test_cache.py  test_cli_tui.py  test_dimension_nav.py  test_exploration_pad.py  test_intelligence.py  test_keybindings.py  test_realtime_scorer.py  test_section_vibe.py  test_variation_drawer.py
